# zfp-experiment

./: CMakeLists.txt  README.md  cpp.sh  cpp_results.txt  fc.sh  main  main.cpp  main.f90  plot.py  results.txt  run.sh
results_device/: cpp_results.txt
results_host/: cpp_results.txt
