CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(Experiment LANGUAGES Fortran)

INCLUDE(GNUInstallDirs)

FIND_PACKAGE(MPI REQUIRED COMPONENTS Fortran)

ADD_DEFINITIONS(${MPI_Fortran_COMPILE_FLAGS})
INCLUDE_DIRECTORIES(${MPI_Fortran_INCLUDE_DIRS})
LINK_DIRECTORIES(${MPI_Fortran_LIBRARIES})
LINK_LIBRARIES(${MPI_Fortran_LIBRARIES})
LIST(APPEND CMAKE_EXE_LINKER_FLAGS ${MPI_Fortran_LINK_FLAGS})

ADD_EXECUTABLE(zfp_experiment "main.f90")
