CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(Experiment LANGUAGES Fortran)

INCLUDE(GNUInstallDirs)
INCLUDE(ExternalProject)

FIND_PACKAGE(MPI REQUIRED COMPONENTS Fortran)

ADD_DEFINITIONS(${MPI_Fortran_COMPILE_FLAGS} " -acc -O3 -Minfo")
INCLUDE_DIRECTORIES(${MPI_Fortran_INCLUDE_DIRS} "${CMAKE_SOURCE_DIR}/zfp/build/modules/")
LINK_DIRECTORIES(${MPI_Fortran_LIBRARIES} "${CMAKE_SOURCE_DIR}/zfp/build/lib/")
LINK_LIBRARIES(${MPI_Fortran_LIBRARIES} "libzFORp.so")
ADD_LINK_OPTIONS("-acc")
LIST(APPEND CMAKE_EXE_LINKER_FLAGS ${MPI_Fortran_LINK_FLAGS})

ADD_EXECUTABLE(zfp_experiment "main.f90")
